# executor

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: cgride-executor-config.cmake.in
include/cgride/: executor.hpp
include/cgride/executor/: execution_options.hpp  executor.hpp  process.hpp  process_result.hpp  task_result.hpp  version.hpp
src/: execution_options.cpp  executor.cpp  process.cpp  process_result.cpp  task_result.cpp
tests/: CMakeLists.txt  execution_options_test.cpp  executor_test.cpp  process_result_test.cpp  process_test.cpp  task_result_test.cpp
